# gasttdir

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_gasttdir.py  metadata.json  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  StructureDataset-metadata.json  cldf-metadata.json  examples.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: languages.csv  parameters.csv
raw/: Intensifiers.doc  tdir.examples.csv  tdir.examples.xls  tdir.glosses.csv  tdir.glosses.xls  tdir.languages.csv  tdir.languages.xls  tdir.references.bib  tdir.references.csv  tdir.references.xls
